# MFT-Analysis

./: .gitignore  CODE_BREAKDOWN.md  README.md  cointegration_sample.csv  how_to_use.md
arbitrage/: CMakeLists.txt  README.md  arbitrage_analyzer  build.ps1  build.sh  main.cpp
arbitrage/config/: default_config.yaml
arbitrage/include/core/: arbitrage_analyzer.h  fast_csv_loader.h  stock_data.h
arbitrage/include/export/: excel_exporter.h
arbitrage/include/statistics/: simd_statistics.h
arbitrage/src/core/: arbitrage_analyzer.cpp  fast_csv_loader.cpp  stock_data.cpp
arbitrage/src/export/: csv_exporter.cpp  excel_exporter.cpp  json_exporter.cpp
arbitrage/src/statistics/: cointegration_analyzer.cpp  correlation_analyzer.cpp  simd_statistics.cpp
cross-platform-config/: README.md
feature_engineering/: CMakeLists.txt  FEATURE_ENGINEERING_BREAKDOWN.md  README.md  build.ps1  build.sh  ohlc_features_cpp  run.sh
feature_engineering/bindings/: pybind_module.cpp
feature_engineering/include/: adaptive_core_benchmark.h  batch_ohlc_processor.h  batch_processor.h  csv_reader.h  csv_writer.h  large_scale_benchmark.h  multi_core_benchmark.h  neon_technical_indicators.h  ohlcv_data.h  performance_benchmark.h  simd_technical_indicators.h  simd_utils.h  technical_indicators.h
feature_engineering/ohlc_features_cpp.dSYM/Contents/: Info.plist
feature_engineering/ohlc_features_cpp.dSYM/Contents/Resources/DWARF/: ohlc_features_cpp
feature_engineering/ohlc_features_cpp.dSYM/Contents/Resources/Relocations/aarch64/: ohlc_features_cpp.yml
feature_engineering/src/: adaptive_core_benchmark.cpp  batch_ohlcv_processor.cpp  batch_processor.cpp  csv_reader.cpp  csv_writer.cpp  large_scale_benchmark.cpp  main.cpp  multi_core_benchmark.cpp  neon_technical_indicators.cpp  performance_benchmark.cpp  simd_technical_indicators.cpp  simd_utils.cpp  technical_indicators.cpp
visualization/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  README_MODULAR.md  README_PAIRS.md  build.ps1  build.sh  build_all.sh  build_pairs.sh  data  filtered_pairs.csv  imgui.ini  main.cpp  main.py  setup.ps1  setup.sh
visualization/examples/: modular_example.cpp
visualization/include/: ChartRenderer.h  CointegrationData.h  CointegrationVisualizer.h  StockData.h  StockVisualizer.h  UIComponents.h  VisualizationManager.h
visualization/include/core/: ChartFactory.h  FeatureExtractor.h  FeatureRegistry.h
visualization/include/rendering/: ModularChartRenderer.h
visualization/src/: ChartRenderer.cpp  ChartRenderer.h  CointegrationVisualizer.cpp  FileManager.cpp  FileManager.h  StockData.h  StockVisualizer.cpp  StockVisualizer.h  UIComponents.cpp  VisualizationManager.cpp  launcher_main.cpp  main.cpp  pairs_main.cpp
visualization/src/core/: ChartFactory.cpp  FeatureExtractor.cpp  FeatureRegistry.cpp
visualization/src/rendering/: ModularChartRenderer.cpp
